--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.1"
   },
   "scripts": {
     "start": "NODE_PATH=src/ react-scripts start",
-    "build": "react-scripts build",
+    "build": "NODE_PATH=src/ react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
